# obix-sdk

./: README.md
TRANSCRIPT/: OBIXSDKMarch26.txt  SemverX.txt
obix-adapter/: adapter.txt  main.js
obix-adapter/adapter/: DOPAdapter.js
obix-sdk/: package-lock.json  package.json
obix-sdk/docs/: INSTALLATION.md  ux-risk-coverage.md
projects/semverx/semverx_canonical/: Cargo.toml
projects/semverx/semverx_canonical/ci/scripts/: validate-coherence.py
projects/semverx/semverx_canonical/ci/workflows/: filterflash-oracle.yml
projects/semverx/semverx_canonical/polyglot/python/: setup.py
projects/semverx/semverx_canonical/polyglot/python/pysemverx/: filterflash.py
projects/semverx/semverx_canonical/polyglot/typescript/: package.json
projects/semverx/semverx_canonical/semverx/: Cargo.toml
projects/semverx/semverx_canonical/semverx/bidag/: mod.rs
projects/semverx/semverx_canonical/semverx/bidag/resolver/: mod.rs
projects/semverx/semverx_canonical/semverx/core/: mod.rs
projects/semverx/semverx_canonical/semverx/filterflash/: mod.rs
projects/semverx/semverx_canonical/semverx/nlm/: mod.rs
projects/semverx/semverx_canonical/semverx/observer_gate/: mod.rs
projects/semverx/semverx_canonical/semverx/registry/: mod.rs
projects/semverx/semverx_canonical/semverx/src/: lib.rs
runtime/: DLL_EXPORT_FILES_CREATED.txt  Polycallfile.toml  README.md  TEMPLATE_polycall.c.example
runtime/daemon/: makefile
runtime/libpolycall-v1/examples/mvp/: CMakeLists.txt  docker-compose  libpolycall_core.h  test_seperation.py
runtime/libpolycall-v1/projects/banking-secure-bridge/: CMakeLists.txt  README.md
runtime/libpolycall-v1/projects/banking-secure-bridge/bindings/: cbl-polycall.cob
runtime/libpolycall-v1/projects/banking-secure-bridge/src/: banking_bridge.c  zero_trust_auth.c
runtime/libpolycall-v1/projects/banking-secure-bridge/tests/: test_guid_replication.py
runtime/projects/edge-iot-mesh/: CMakeLists.txt  Makefile  README.md
runtime/projects/edge-iot-mesh/config/: edge.Polycallfile
runtime/projects/edge-iot-mesh/include/: cir_types.h
runtime/projects/edge-iot-mesh/src/: mesh_routing.c  polycall_security.h
runtime/projects/edge-iot-mesh/tests/: test_cache_consistency.py
runtime/projects/telemetry-dashboard/: CMakeLists.txt  Makefile  README.md
runtime/projects/telemetry-dashboard/bindings/: go_telemetry_client.go  lua_embedded.lua
runtime/projects/telemetry-dashboard/bindings/js_dashboard/src/: CIRVisualizer.jsx
runtime/projects/telemetry-dashboard/examples/: reproduce_bug.py
runtime/projects/telemetry-dashboard/src/: cir_object.h  huffman_avl.c  telemetry_server.c
(+305 files in other folders)
