[workspace]
members = [
    "semverx",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OBINexus <obinexus@proton.me>"]
license = "OPENSENSE-NT"
repository = "https://github.com/obinexus/semverx"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
petgraph = "0.6"
sha2 = "0.10"
